css/index.css
.container {
  width: 60%;
  margin: auto;
  text-align: center;
  font-size: 1.7em;
}

header img {
  width: 100px;
  height: 100px;
}

h1 {
  margin-top: 10px;
  display: inline-block;
}

.pomodoroTitle1 {
  color: #FF2813;
}

.pomodoroTitle2 {
  color: #FFC10A;
}

.button {
  border: solid 1px;
  border-radius: 8px;
  background-color: transparent;
  font-size: 0.7em;
  margin: 5px;
  padding: 4px 8px;
}

.button:hover {
  background-color: #CCC;
  cursor: pointer;
}

.button:active {
  background-color: #AAA;
}

.button:focus {
  border-color: #00D61A;
  box-shadow: 0px 0px 5px #00D61A;
}

.inputNumber {
  border: solid 1px;
  border-radius: 8px;
  font-size: 0.7em;
  margin: 5px;
  padding: 4px 8px;
}

h1, h2, #pomodoroTimerText, p {
  font-family: 'Orbitron', sans-serif;
}

.pomodoroTimers {
  width: 100%;
  height: 300px; 
  position: relative;
}

.middleTimer .timerText {
  font-size: 3em;
  transition: 1s;
}

.leftTimer .timerText, .rightTimer .timerText {
  font-size: 2.5em;
}

.leftTimer {
  position: absolute;
  font-size: 0.6em;
  opacity: 0.6;
  top: 0px;
  left: 0px;
  transition: 1s;
}

.rightTimer {
  position: absolute;
  font-size: 0.6em;
  opacity: 0.5;
  top: 0px;
  right: 0px;
  transition: 1s;
}

#pomodoroTimerText {
  color: #FF0D00;
}

#breakTimerText {
  color: #00B8EC;
}

#longBreakTimerText {
  color: #00D61A;
}

@media (max-width: 1100px) {
  .container {
    font-size: 1.2em;
  }

  .pomodoroTimers {
    width: 100%;
    height: 200px;
    position: relative;
  }

  .leftTimer {
    top: -30px;
    left: -40px;
  }

  .rightTimer {
    top: -30px;
    right: -40px;
  }

  .button {
    font-size: 1em;
  }
  
}

@media (max-width: 500px) {
  .container {
    width: 70%;
  }
}

